// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notifications > should render in xs 1`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="table-row border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
          data-testid="TableRow"
        >
          <td
            class="flex-col py-4 px-6 space-y-4"
            data-testid="NotificationTransactionItemMobile"
          >
            <div
              class="flex justify-between items-center space-x-4"
            >
              <div
                class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Address
              </div>
              <div
                class="w-40 xs:w-50 min-[480px]:w-2/3"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-base font-semibold text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0x93485b57ff3DeD81430D08579142fAe8234c6A17
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-4"
            >
              <div
                class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures bg-theme-success-100 text-theme-success-700 w-fit dark:border-theme-success-700 dark:text-theme-success-500"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex items-center space-x-1 h-full"
                >
                  <span
                    class="text-sm whitespace-nowrap"
                    data-testid="Amount"
                  >
                    + 2 ARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 2`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="table-row border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
          data-testid="TableRow"
        >
          <td
            class="flex-col py-4 px-6 space-y-4"
            data-testid="NotificationTransactionItemMobile"
          >
            <div
              class="flex justify-between items-center space-x-4"
            >
              <div
                class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Address
              </div>
              <div
                class="w-40 xs:w-50 min-[480px]:w-2/3"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-base font-semibold text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0x93485b57ff3DeD81430D08579142fAe8234c6A17
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-4"
            >
              <div
                class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures bg-theme-success-100 text-theme-success-700 w-fit dark:border-theme-success-700 dark:text-theme-success-500"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex items-center space-x-1 h-full"
                >
                  <span
                    class="text-sm whitespace-nowrap"
                    data-testid="Amount"
                  >
                    + 2 ARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 3`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="table-row relative border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex static items-center px-3 pl-6 my-1 mx-0 rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="flex absolute top-0 bottom-0 left-2 items-center"
              >
                <div
                  class="w-2 h-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="flex-1 w-20"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-base font-semibold text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex justify-end items-center px-3 my-1 font-semibold whitespace-nowrap transition-colors duration-100 min-h-11 text-theme-secondary-700 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-500 group-hover:bg-theme-secondary-200"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex static justify-end items-center px-3 pr-6 my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="h-5"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures bg-theme-success-100 text-theme-success-700 w-fit dark:border-theme-success-700 dark:text-theme-success-500"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 2 ARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute right-0 -bottom-px w-8 h-px bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 4`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="table-row relative border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex static items-center px-3 pl-6 my-1 mx-0 rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="flex absolute top-0 bottom-0 left-2 items-center"
              >
                <div
                  class="w-2 h-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="flex-1 w-20"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-base font-semibold text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex justify-end items-center px-3 my-1 font-semibold whitespace-nowrap transition-colors duration-100 min-h-11 text-theme-secondary-700 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-500 group-hover:bg-theme-secondary-200"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex static justify-end items-center px-3 pr-6 my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="h-5"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures bg-theme-success-100 text-theme-success-700 w-fit dark:border-theme-success-700 dark:text-theme-success-500"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 2 ARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute right-0 -bottom-px w-8 h-px bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 5`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="table-row relative border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex static items-center px-3 pl-6 my-1 mx-0 rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="flex absolute top-0 bottom-0 left-2 items-center"
              >
                <div
                  class="w-2 h-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="flex-1 w-20"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-base font-semibold text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex justify-end items-center px-3 my-1 font-semibold whitespace-nowrap transition-colors duration-100 min-h-11 text-theme-secondary-700 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-500 group-hover:bg-theme-secondary-200"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex static justify-end items-center px-3 pr-6 my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="h-5"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures bg-theme-success-100 text-theme-success-700 w-fit dark:border-theme-success-700 dark:text-theme-success-500"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 2 ARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute right-0 -bottom-px w-8 h-px bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render notification item 1`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="table-row relative border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex static items-center px-3 pl-6 my-1 mx-0 rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="flex absolute top-0 bottom-0 left-2 items-center"
              >
                <div
                  class="w-2 h-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="flex-1 w-20"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-base font-semibold text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex justify-end items-center px-3 my-1 font-semibold whitespace-nowrap transition-colors duration-100 min-h-11 text-theme-secondary-700 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-500 group-hover:bg-theme-secondary-200"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex static justify-end items-center px-3 pr-6 my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
            >
              <div
                class="h-5"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures bg-theme-success-100 text-theme-success-700 w-fit dark:border-theme-success-700 dark:text-theme-success-500"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 2 ARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute right-0 -bottom-px w-8 h-px bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;
